--- a/dom/index.html
+++ b/dom/index.html
@@ -6,18 +6,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
         crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <script src="js.js"></script>
+    <script src="calc.js"></script>
 </head>
 
 <body>
-    <div class="container">
-        <div class="box">
-            <input type="text" id="number1">
-            <button type="button" id="addButton" class="btn btn-light">+</button>
-            <input type="text" id="number2">
-        </div>    
-        <div class="box" id="output">
-        </div>
+    <div class="box">
+        a: <input type="text" id="number1">
+        <button type="button" id="addButton" class="btn btn-light">+</button> <br>
+        b: <input type="text" id="number2">
+    </div>    
+    <div class="box" id="output">
     </div>
 </body>
 
